--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
             <div id="pageFrame" class="pageFrame">
                 <div>
                     <h2>
-                        Enter the letters from Spelling Bee:
+                        Beginning with the centre hex, enter the letters from Spelling Bee:
                     </h2>
                 </div>
                 <div class="hexContainer">
