--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spelling Bee Solver</title>
-    <link rel="icon" type="image/x-icon" href="/spellingbeesolver/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/spellingbeesolver/img/favicon.png">
     <link rel="stylesheet" href="/spellingbeesolver/css/pagelayout.css">
     <link rel="stylesheet" href="/spellingbeesolver/css/styles.css">
     <link rel="stylesheet" href="/spellingbeesolver/css/spellingbeestyles.css">
